# trend-lab-video-folder-gpt-260522

./: README.md  pyproject.toml
src/video_folder_gpt/: main.py
tests/: test_smoke.py
